# aoc

./: .gitignore  README.md  pyproject.toml
aoc/: __main__.py  client.py  utils.py
aoc/day1/: __init__.py
aoc/day15/: __init__.py
aoc/day2/: __init__.py
aoc/day3/: __init__.py
aoc/day4/: __init__.py  puzzle1.py  puzzle2.py
aoc/day5/: __init__.py
aoc/day6/: __init__.py
aoc/day7/: __init__.py
aoc/day8/: __init__.py
aoc/day9/: __init__.py
tests/: test_answers.py
