[tool.poetry]
name = "aoc"
version = "0.0.24"
description = "Advent of Code"
authors = ["Alec Gunny"]

[tool.poetry.scripts]
aoc = "aoc.__main__:cli"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"